--- a/MultMap/MultMap.csproj
+++ b/MultMap/MultMap.csproj
@@ -69,7 +69,7 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>2299C43B201CAC3705A58BF5AACF2E19ACB988CF</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>5636B0287D863EFA0112E9EC313E3F561A5FA503</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
@@ -97,7 +97,8 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>MultMap_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>
+    </ManifestKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.ReportViewer.DataVisualization">
